<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="pt"
            type="com.casl.model.Participant"/>
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <TableLayout
        android:id="@+id/ptLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/firstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/first_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/frutaTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:focusable="false"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:text="@{pt.firstName}"
                android:textColor="@android:color/darker_gray" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/lastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/last_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:focusable="false"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:text="@{pt.lastName}"
                android:textColor="@android:color/darker_gray" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/chnName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/chinese_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:focusable="false"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:text="@{pt.chineseName}"
                android:textColor="@android:color/darker_gray" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/gender"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:focusable="false"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:text="@{pt.gender}"
                android:textColor="@android:color/darker_gray" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/dob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/birthday"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:focusable="false"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:text="@{pt.dobStr}"
                android:textColor="@android:color/darker_gray" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/sheng"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:imeOptions="actionDone"
                android:inputType="textPostalAddress"
                android:maxLines="1"
                android:text="@{pt.memHome.state}" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/shi"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:imeOptions="actionDone"
                android:inputType="textPostalAddress"
                android:maxLines="1"
                android:text="@{pt.memHome.city}" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/xingzhengqu"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerStreetType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                />
           <!-- <EditText
                android:id="@+id/streetType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:imeOptions="actionDone"
                android:inputType="textPostalAddress"
                android:text="@{pt.memHome.streetType}" />-->
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/jiedao"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/streetNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:imeOptions="actionDone"
                android:inputType="textPostalAddress"
                android:text="@{pt.memHome.streetNumber}" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/shequ"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinnerDirection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                />
            <!--<EditText
                android:id="@+id/streetDirection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:imeOptions="actionDone"
                android:inputType="textPostalAddress"
                android:text="@={pt.memHome.streetDirection}" />-->
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/xiangxi"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/streetName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:imeOptions="actionDone"
                android:inputType="textPostalAddress"
                android:text="@{pt.memHome.streetName}" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/cellPhone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/cellPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:text="@{pt.cellPhone}" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/homephone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/homePhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:text="@{pt.memHome.homePhone}" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/workphone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/workPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:text="@{pt.workPhone}" />
        </TableRow>

        <!--TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lang_pref"/>

            <RadioGroup
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/colorSpinner">
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Test 1"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Test 2"/>
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lang_can"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:text="checkbox 1"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="phone"/>
                <CheckBox
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:text="checkbox 2"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="phone"/>
            </LinearLayout>

        </TableRow-->


        <!--TableRow
            android:id="@+id/ssnMissing"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/missSSN"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:focusable="false"
                android:imeOptions="flagNoExtractUi"
                android:inputType="phone"
                android:text="@{Boolean.toString(pt.isMissingSSN)}"
                android:textColor="@android:color/darker_gray" />
        </TableRow-->

    </TableLayout>

    <!--include
        layout="@layout/language_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:pt="@{pt}"/-->
</LinearLayout>
</ScrollView>
</layout>